[package]
name = "bors2"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[dependencies]
env_logger = { version = "0.3", default-features = false }
log = "0.3"
# postgres = "0.11"
# r2d2 = "0.7"
# r2d2_postgres = "0.10"
rustc-serialize = "0.3"
diesel = "0.8.0"
diesel_codegen = { version = "0.8.0", features = ["postgres"] }
dotenv = "0.8.0"
openssl = "0.8"
hyper = { version = "0.9", default-features = false }
