[package]
name = "bors2"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[dependencies]
curl = "0.3"
env_logger = { version = "0.3", default-features = false }
handlebars = "0.21"
log = "0.3"
oauth2 = "*"
openssl = "0.8"
rustc-serialize = "0.3"
url = "1.0"
error-chain = "0.5"
rand = "0.3"

migrate = { path = "migrate" }
rand = "0.3"
time = "0.1"
git2 = "0.5"
flate2 = "0.2"
semver = "0.5"
url = "1.2.1"
postgres = { version = "0.12", features = ["with-time"] }
r2d2 = "0.7.0"
r2d2_postgres = "0.11"
openssl = "0.7"
curl = "0.2"
oauth2 = "0.1"
log = "0.3"
env_logger = "0.3"
rustc-serialize = "0.3"
license-exprs = "^1.3"
dotenv = "0.8.0"

conduit = "0.8"
conduit-conditional-get = "0.8"
conduit-cookie = "0.8"
conduit-log-requests = "0.8"
conduit-middleware = "0.8"
conduit-router = "0.8"
#conduit-static = "0.8"
conduit-git-http-backend = "0.8"
civet = "0.9"
