[package]
name = "bors2"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[dependencies]
civet = "0.9"
conduit = "0.8"
conduit-conditional-get = "0.8"
conduit-cookie = "0.8"
conduit-git-http-backend = "0.8"
conduit-log-requests = "0.8"
conduit-middleware = "0.8"
conduit-router = "0.8"
conduit-static = "0.8.1"
curl = "0.3"
env_logger = { version = "0.3", default-features = false }
error-chain = "0.5"
handlebars = "0.21"
lazycell = "0.4"
log = "0.3"
migrate = { path = "migrate" }
oauth2 = "*"
openssl = "0.8"
postgres = { version = "0.12", features = ["with-time"] }
r2d2 = "0.7.0"
r2d2_postgres = "0.11"
rand = "0.3"
rustc-serialize = "0.3"
url = "1.0"
base64 = "0.2"
